--- a/TODOList/Views/Clientes/Create.cshtml
+++ b/TODOList/Views/Clientes/Create.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
+
 <h1>Create</h1>
 
 <h4>Cliente</h4>
@@ -23,14 +24,14 @@
                 <span asp-validation-for="TipoUsuario" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volta à lista</a>
 </div>
 
 @section Scripts {
