--- a/TODOList/Views/TODOItems/Delete.cshtml
+++ b/TODOList/Views/TODOItems/Delete.cshtml
@@ -1,57 +1,63 @@
 ﻿@model TODOList.Models.TODOItem
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Apagar";
 }
 
-<h1>Delete</h1>
+<h1>Apagar</h1>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
+<div >
     <h4>TODOItem</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Concluido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Concluido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataHoraInsercao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataHoraInsercao)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataHoraVencimento)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataHoraVencimento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataHoraFinalizacao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataHoraFinalizacao)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DataHoraAtualização)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DataHoraAtualização)
-        </dd>
+      <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Name)
+      </dt>
+      <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Name)
+      </dd>
+      <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Descricao)
+      </dt>
+      <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Descricao)
+      </dd>
+      <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.Concluido)
+      </dt>
+      <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.Concluido)
+      </dd>
+      <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.DataHoraInsercao)
+      </dt>
+      <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.DataHoraInsercao)
+      </dd>
+      <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.DataHoraVencimento)
+      </dt>
+      <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.DataHoraVencimento)
+      </dd>
+      <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.DataHoraFinalizacao)
+      </dt>
+      <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.DataHoraFinalizacao)
+      </dd>
+      <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.DataHoraAtualizacao)
+      </dt>
+      <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.DataHoraAtualizacao)
+      </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Apagar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volta à lista</a>
     </form>
 </div>
