--- a/TODOList/Views/TODOItems/Index.cshtml
+++ b/TODOList/Views/TODOItems/Index.cshtml
@@ -1,65 +1,79 @@
 ﻿@model IEnumerable<TODOList.Models.TODOItem>
 
 @{
-    ViewData["Title"] = "TODO Item";
+  ViewData["Title"] = "Login";
 }
 
-<h1>TODO Item</h1>
+@{
+  if (Program.EstaLogado)
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+  {
+    <h1>Tarefas</h1>
+
+    <p>
+      <a asp-action="Create">Criar Novo</a>
+    </p>
+    <table class="table tabela" style="width:100%">
+      <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Concluido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataHoraInsercao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataHoraVencimento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataHoraFinalizacao)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataHoraAtualização)
-            </th>
-            <th></th>
+          <th>
+            @Html.DisplayNameFor(model => model.Name)
+          </th>
+          <th>
+            @Html.DisplayNameFor(model => model.Descricao)
+          </th>
+          <th>
+            @Html.DisplayNameFor(model => model.Concluido)
+          </th>
+          <th>
+            @Html.DisplayNameFor(model => model.DataHoraInsercao)
+          </th>
+          <th>
+            @Html.DisplayNameFor(model => model.DataHoraVencimento)
+          </th>
+          <th>
+            @Html.DisplayNameFor(model => model.DataHoraFinalizacao)
+          </th>
+          <th>
+            @Html.DisplayNameFor(model => model.DataHoraAtualizacao)
+          </th>
+          <th></th>
         </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
+      </thead>
+      <tbody>
+        @foreach (var item in Model)
+        {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Concluido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataHoraInsercao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataHoraVencimento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataHoraFinalizacao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataHoraAtualização)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+          <td>
+            @Html.DisplayFor(modelItem => item.Name)
+          </td>
+          <td>
+            @Html.DisplayFor(modelItem => item.Descricao)
+          </td>
+          <td>
+            @Html.DisplayFor(modelItem => item.Concluido)
+          </td>
+          <td>
+            @Html.DisplayFor(modelItem => item.DataHoraInsercao)
+          </td>
+          <td>
+            @Html.DisplayFor(modelItem => item.DataHoraVencimento)
+          </td>
+          <td>
+            @Html.DisplayFor(modelItem => item.DataHoraFinalizacao)
+          </td>
+          <td>
+            @Html.DisplayFor(modelItem => item.DataHoraAtualizacao)
+          </td>
+          <td>
+            <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+            <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+            <a asp-action="Delete" asp-route-id="@item.Id">Apagar</a>
+          </td>
         </tr>
-}
-    </tbody>
-</table>
+        }
+      </tbody>
+    </table>
+
+    }
+  }
